src/app/Features/login/login.component.scss
.login-page {
  min-height: 100vh;
  background: #0b0b0b;
  color: white;

  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 0;
}

.login-content {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.login-footer {
  width: 100%;
  text-align: center;
  color: #888;
  font-size: 13px;

  padding: 15px 0;
  border-top: 1px solid #222;

  background: #050505;
}
/* ================= TOP HEADER ================= */

.login-header {
  width: 100%;
  background: #050505;

  display: flex;
  justify-content: center;
  align-items: center;

  padding: 18px 0;
  margin-bottom: 80px;

  border-bottom: 1px solid #222;
  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
}

/* HEADER TEXT */

.login-header h2 {
  margin: 0;
  color: #ffd700 !important;

  font-size: 28px;
  font-weight: 700;

  display: flex;
  align-items: center;
  gap: 10px;
}

/* HEADER ICON */

.login-header mat-icon {
  color: #ffd700 !important;

  font-size: 28px;
  width: 28px;
  height: 28px;
}

.login-footer {
  width: 100%;
  text-align: center;
  color: #ffd700;
  font-size: 12px;
  padding: 12px 0;
  margin-top: 30px;
  border-top: 1px solid #222;
  background: #050505;
  letter-spacing: 0.5px;
}

.login-content {
  flex: 1;               /* pushes footer down */
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

/* ================= LOGIN CARD ================= */

.login-card {
  width: 100%;
  max-width: 380px;

  background: #151515;
  padding: 28px;

  border-radius: 18px;

  border: 1px solid rgba(255, 255, 255, 0.08);

  box-shadow: 0 4px 18px rgba(0, 0, 0, 0.45);

  transition: 0.3s ease;
}

.login-card p {
  color: #d0d0d0;
  margin-bottom: 20px;
  font-size: 18px;
  text-align: center;
}

/* ================= INPUT BOX ================= */

.input-box {
  display: flex;
  align-items: center;

  background: #222;

  padding: 14px;

  border-radius: 12px;

  margin-bottom: 18px;

  border: 1px solid transparent;

  transition: 0.3s ease;
}

/* INPUT FOCUS EFFECT */

.input-box:focus-within {
  border: 1px solid #ffd700;
  box-shadow: 0 0 8px rgba(255, 215, 0, 0.25);
}

.input-box mat-icon {
  color: #aaa;
  font-size: 22px;
}

/* INPUT FIELD */

.input-box input {
  width: 100%;

  background: transparent;
  border: none;
  outline: none;

  color: white;

  margin-left: 12px;
  font-size: 16px;
}

/* PLACEHOLDER */

.input-box input::placeholder {
  color: #888;
}

/* ================= BUTTON ================= */

button {
  width: 100%;

  background: #f3f51b;
  color: black;

  border: none;

  padding: 12px;

  border-radius: 10px;

  font-weight: 700;
  font-size: 14px;

  cursor: pointer;

  transition: 0.3s ease;
}

/* BUTTON HOVER */

button:hover {
  opacity: 0.92;
  transform: scale(1.01);
}

/* BUTTON CLICK */

button:active {
  transform: scale(0.98);
}

